updates on controlling toolbar settings.

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -21,7 +21,7 @@
                       <li class="special ribbed-emerald" (click)="toogleCharm()" style="cursor: pointer"><a>Online</a></li>
                       <li *ngIf="_toolSettings.SECTIONS.TICKET.onoff" class="active"><a href="#tab_tickets">Ticket</a></li>
                       <li *ngIf="_toolSettings.SECTIONS.SUBDIVISION.onoff" class=""><a href="#tab_subdivision">Subdivision</a></li>
-                      <li><a href="#tab_nrfs">NRF's</a></li>
+                      <li *ngIf="_toolSettings.SECTIONS.NRF.onoff"><a href="#tab_nrfs">NRF's</a></li>
                       <li *ngIf="_toolSettings.SECTIONS.MAP.onoff"  class=""><a href="#tab_map">Map</a></li>
                       <li *ngIf="_toolSettings.SECTIONS.SETTINGS.onoff" class=""><a href="#tab_settings">Settings</a></li>
                       
