many updates done

--- a/src/app/settings/user-i/user-i.component.html
+++ b/src/app/settings/user-i/user-i.component.html
@@ -11,7 +11,7 @@
             
             <li >
               <a href="#user">
-                <img (click)="_displayCanvas()" [src]="src" style="border-radius: 100%; background: #1d1d1d;" width="50" height="50" data-format='cycle' alt="Avatar">
+                <!-- <img (click)="_displayCanvas()" [src]="src" style="border-radius: 100%; background: #1d1d1d;" width="50" height="50" data-format='cycle' alt="Avatar"> -->
                 User Information
               </a>
             </li>
