minor update mispelled word preffered

--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -106,7 +106,7 @@
             <br>
             <br>
             <div class="input-control text full-size">
-                    <label  >Preffered Language</label>
+                    <label  >Prefered Language</label>
                 <select [disabled]="customerSection" [(ngModel)]="attributes.prf_language">
                     <option>English</option>
                     <option>Spanish</option>
