--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -324,7 +324,7 @@
                                     <span class="label">Ranges</span>
                                 </button>
 
-                                <button *ngIf="_toolSettings.SECTIONS.MAP.TOOLS.ids.MEASURE" (click)="actionSendToolBar(app.toolbarActivies.MAP_MEASURE)"   class="fluent-big-button">
+                                <button *ngIf="_toolSettings.SECTIONS.MAP.TOOLS.ids.MEASURE" (click)="actionSendToolBar(app.toolbarActivies.BOOKMARK)"   class="fluent-big-button">
                                     <img src="assets/measuring-tool.png" alt="M">
                                     <span class="label">Bookmarks</span>
                                 </button>
