new updates to spartan pro

--- a/src/app/subdivision/worksheet/editing/tools/tools.component.html
+++ b/src/app/subdivision/worksheet/editing/tools/tools.component.html
@@ -7,7 +7,7 @@
         <button (click)='addText()' class="toolbar-button"><i class="fa fa-text-width" aria-hidden="true"></i></button>
         <button class="toolbar-button"><i class="fa fa-list" aria-hidden="true"></i></button>
         <button class="toolbar-button"><i class="fa fa-square" aria-hidden="true"></i></button>
-        <button class="toolbar-button"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+        <button (click)="onSave()" class="toolbar-button"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
     </div>
 </div>
 
