--- a/src/app/ticket-charts/ticket-charts.component.css
+++ b/src/app/ticket-charts/ticket-charts.component.css
@@ -2,7 +2,11 @@
     position: relative;
     top: 50%;
     left: 65%;
+    float: left;
     margin-left: -50%;
     width: 100%;
     height: 100%;
+}
+a{
+    cursor: pointer;
 }
