--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -5,6 +5,7 @@
                         <ul class="split-content d-menu place-right" style="min-width: 0;" data-role="dropdown">
                             <li><a (click)="onLogOut()">Log Out <i class="fa fa-sign-out"></i></a></li>
                             <li><a (click)="toogleToolbar()">Collapse Toolbar</a></li>
+                            <li><a (click)="goFullScreen()">Full Screen</a></li>
                         </ul>
                 </div>
         </div>
