--- a/src/app/quick-pick-list/quick-pick-list.component.html
+++ b/src/app/quick-pick-list/quick-pick-list.component.html
@@ -7,7 +7,7 @@
                   <img [src]="pick.src">
                   <button (click)="removeElement(pick, i)" class="button rounded danger">Delete</button>
                   <button (click)="zoomPic(pick, i)" class="button rounded primary">Zoom</button>
-                  <button class="button rounded primary">Upload</button>
+                  <button (click)="uploadPic(pick)" class="button rounded primary">Upload</button>
                 </div>
               </div>
         </div>
