--- a/src/app/esri-map/esri-map.component.html
+++ b/src/app/esri-map/esri-map.component.html
@@ -3,6 +3,7 @@
     <span class="window-caption-icon"><i class="fa fa-gamepad" aria-hidden="true"></i></span>
     <span class="window-caption-title">Map Viewer</span>
     <span class="pull-right">
+    
         <button (click)="closeMap()" class="button btnSize">
             <i class="fa fa-window-close" aria-hidden="true"></i>
         </button>
@@ -13,6 +14,8 @@
       </button>
     </span>
     <span class="pull-right">
+        <button (click)="changeBaseMap()" *ngIf="image" class="button btnSize">Aerial</button>
+        <button (click)="changeBaseMap()" *ngIf="base" class="button btnSize">baseMap</button>
       <button (click)="minimizedMap()" class="button btnSize">
           <i class="fa fa-window-minimize" aria-hidden="true"></i>
       </button></span>
