--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -159,7 +159,7 @@
                                           <span class="label">Map</span>
                                   </button>
                                       <ul class="d-menu" data-role="dropdown">
-                                          <li><a (click)="actionSendToolBar(app.toolbarActivies.TICKET_ESRI_MAP)">Basemap</a></li>
+                                          <!-- <li><a (click)="actionSendToolBar(app.toolbarActivies.TICKET_ESRI_MAP)">Basemap</a></li> -->
                                           <li><a (click)='actionSendToolBar(app.toolbarActivies.TICKET_ESRI_IMAGERY)'>Aerial</a></li>
                                           <li><a (click)="actionSendToolBar(app.toolbarActivies.TICKET_GOOGLE_MAP)">Google Map</a></li>
                                       </ul>
