added new map functionality..

--- a/src/app/esri-map/esri-map.component.css
+++ b/src/app/esri-map/esri-map.component.css
@@ -22,3 +22,16 @@
     height: 100%;
     width: 100%
 }
+img {
+    height: 18px;
+    
+}
+
+
+.dijitButtonContents {
+    padding: 5px 10px;
+
+  }
+
+
+  
