new updates for identify

--- a/src/app/esri-map/esri-map.component.html
+++ b/src/app/esri-map/esri-map.component.html
@@ -14,7 +14,7 @@
       </button>
     </span>
     <span class="pull-right">
-      <button (click)="onIdentify()"><img style="margin-bottom: 4px;" src="assets/searchengin-brands.svg" /></button>
+      <button class="button btnSize" (click)="onIdentify()"><img style="margin-bottom: 4px;" src="assets/searchengin-brands.svg" /></button>
       <button (click)="onMeasure()"  class="button btnSize"><img style="margin-bottom: 4px;" src="assets/tape-solid.svg" /></button>
       <button (click)="toggleQuickPick()" [ngClass]="{'enable': quickPickOnOff}" class="button btnSize">QuickPick</button>
         <button (click)="changeBaseMap()" *ngIf="image" class="button btnSize">Aerial</button>
